# CronBackup

./: Dockerfile  README.md  main.py  pyproject.toml
.github/workflows/: build_docker_image.yaml  docker.yaml  on_release.yaml  release_builder.yaml  test.yaml
cronbackup/CronBackup/: CronBackup.py  PostgresDumper.py  __init__.py
cronbackup/CronBackupAlerts/: CronBackupAlert.py  Webhook.py  __init__.py
cronbackup/CronBackupPlugins/: CronBackupPlugin.py  PostgresDumper.py  __init__.py
cronbackup/CronBackupRemotes/: CronBackupRemote.py  S3Remote.py  __init__.py
