[tool.poetry]
name = "cronbackup"
version = "0.1.0"
description = "Docker container for making backups of volumes to S3"
authors = ["BMarcin <m1.borzymowski@gmail.com>"]
license = "GNU General Public License v3.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
croniter = "^1.3.7"
pyaml = "^21.10.1"
boto3 = "^1.24.89"
requests = "^2.28.1"


[tool.poetry.group.test.dependencies]
flake8 = "^5.0.4"
flake8-html = "^0.4.2"
flake8-bugbear = "^22.9.23"
flake8-import-order = "^0.18.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
